infer/tests/codetoanalyze/cpp/errors/types/struct_pass_by_value.cpp
../../frontend/types/struct_pass_by_value.cpp